argo/vllm/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vllm-route
  namespace: vllm
spec:
  parentRefs:
  - name: vllm-gateway
    namespace: vllm
  hostnames:
  - gpt.m1xxos.tech
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: vllm
      port: 8000
