argo/vllm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vllm
  namespace: vllm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - gpt.m1xxos.tech
    secretName: gpt-m1xxos-tech-tls
  rules:
  - host: gpt.m1xxos.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vllm
            port:
              number: 8000
